--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,15 +3,17 @@
 <head>
   {{ partial "head.html" . }}
 </head>
-<body>
+<body id="main">
   <header>
     {{ partial "header.html" . }}
   </header>
   <main>
+    {{ partial "menu.html" (dict "menuID" "main" "page" .) }}
     {{ block "main" . }}{{ end }}
   </main>
   <footer>
     {{ partial "footer.html" . }}
   </footer>
 </body>
+{{ partialCached "head/js.html" . }}
 </html>
