--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -11,10 +11,14 @@ Renders a menu for the given menu ID.
 {{- $menuID := .menuID }}
 
 {{- with index site.Menus $menuID }}
-  <nav>
-    <ul>
-      {{- partial "inline/menu/walk.html" (dict "page" $page "menuEntries" .) }}
-    </ul>
+  <nav class="navbar">
+    <div id="navmenu" class="sidenav">
+      <ul>
+        {{- partial "inline/menu/walk.html" (dict "page" $page "menuEntries" .) }}
+      </ul>
+      <a href="#" class="closebtn">X</a>
+    </div>
+    <a href="#" id="menuToggler">Open</a>
   </nav>
 {{- end }}
 
