--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,1 +1,11 @@
-<h1>{{ site.Title }}</h1>
+<nav aria-label="top-navigation" class="topnav">
+    <div class="site-logo">
+        <span><a href="#" id="menuToggler"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M160-269.23v-40h640v40H160ZM160-460v-40h640v40H160Zm0-190.77v-40h640v40H160Z"/></svg></a></span>
+    </div>
+    <div class="site-title">
+        <h1>{{ site.Title }}</h1>
+    </div>
+    <div class="theme-toggler">
+        <a href="#" id="theme-toggle">Theme</a>
+    </div>
+</nav>
