--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,7 +9,9 @@
   </header>
   <main>
     {{ partial "menu.html" (dict "menuID" "main" "page" .) }}
+    <div class="container">
     {{ block "main" . }}{{ end }}
+    </div>
   </main>
   <footer>
     {{ partial "footer.html" . }}
