--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -7,7 +7,7 @@ $breakpoint-lg: 992px;
 $breakpoint-xl: 1200px;
 
 $font-family-sans: Inter, Seravek, 'Gill Sans Nova', Ubuntu, Calibri, 'DejaVu Sans', source-sans-pro, sans-serif;
-
+$font-family-serif: "IBM Plex Serif", 'Bookman Old Style', 'URW Bookman', 'URW Bookman L', 'Georgia Pro', Georgia, serif; 
 //https://dev.to/ananyaneogi/create-a-dark-light-mode-switch-with-css-variables-34l8
 //https://web.dev/articles/prefers-color-scheme
 
@@ -43,6 +43,7 @@ html[data-theme='dark'] {
 
 body {
     font-family: $font-family-sans;
+    font-size: 18px;
 
     --duration: 0.3s;
     --timing: ease;
@@ -53,10 +54,16 @@ body {
     transition: color var(--duration) var(--timing), background-color var(
           --duration
         ) var(--timing);
+
 }
 
 a {
     color: var(--link-color);
+    text-decoration: none;
+}
+
+body p {
+    margin-bottom: 20px;
 }
 
 main {
@@ -70,7 +77,56 @@ main {
     }
 }
 
+
 //Navigation
+.topnav {
+    border: 1px solid white;
+    display: flex;
+    height: 60px;
+    margin-bottom: 30px;
+}
+
+.topnav .sidebar-toggler {
+    border: 1px solid white;
+    padding: 10px;   
+    vertical-align: middle; 
+}
+
+.topnav .site-title-bar {
+    border: 1px solid white;
+    vertical-align: middle;
+    text-align: center;
+    width: auto;
+    flex-grow: 1;
+    padding: 10px;
+}
+
+.topnav .theme-toggler {
+    border: 1px solid white;
+    padding: 10px;
+    vertical-align: middle;
+}
+
+.site-title {
+    vertical-align: middle;
+    font-family: $font-family-serif;
+    font-weight: 800;
+}
+
+.site-icon {
+    border: 1px solid white;
+    vertical-align: middle;
+}
+#menuToggler {
+    //Style for hamburger button
+    display: none;
+
+    @media only screen and (max-width: $breakpoint-sm) {
+        display: block;
+    }
+}
+
+
 .sidenav {
     height: 100%;
     width: 250px;
@@ -78,17 +134,26 @@ main {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #111;
     overflow-x: hidden;
     transition: 0.5s;
     display: none;
     padding-top: 15px;
+    background-color: var(--background-color);
+    border-right: 1px solid #818181;
+    animation-name: slidein;
+    animation-duration: 0.5s;
 
     @media only screen and (min-width: $breakpoint-sm) {
         display: block;
-        padding-top: 60px;
+        padding-top: 10px;
         position: static;
+        border: 0;
     }
+}
+
+@keyframes slidein {
+    from {left: -250px;}
+    to {left: 0px;}
 }
 
 .sidenav.show {
@@ -98,35 +163,31 @@ main {
 .sidenav a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
-    font-size: 25px;
     color: #818181;
     display: block;
     transition: 0.3s;
+    
 
     @media only screen and (max-width: $breakpoint-sm) {
         font-size: 18px;
     }
 }
 
+.sidenav a.active {
+    color: var(--text-color);
+    
+}
+
 .sidenav a:hover {
-    color: #f1f1f1;
+    color: var(--text-color);
 }
 
 .sidenav .closebtn {
     position: absolute;
     top: 0;
-    right: 25px;
+    right: 5px;
     font-size: 20px;
     margin-left: 50px;
-    display: none;
-
-    @media only screen and (max-width: $breakpoint-sm) {
-        display: block;
-    }
-}
-
-#menuToggler {
-    //Style for hamburger button
     display: none;
 
     @media only screen and (max-width: $breakpoint-sm) {
