--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -11,7 +11,7 @@ Renders a menu for the given menu ID.
 {{- $menuID := .menuID }}
 
 {{- with index site.Menus $menuID }}
-  <nav class="navbar" aria-label="primary-nav">
+  <nav class="navbar" aria-label="primary">
     <div id="navmenu" class="sidenav">
       <ul>
         {{- partial "inline/menu/walk.html" (dict "page" $page "menuEntries" .) }}
