Added footer and page toc

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,15 @@
 {{ define "main" }}
-  <h1>{{ .Title }}</h1>
-
-  {{ .Content }}
-  {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
+<div class="article">
+  {{ with .TableOfContents }}
+  <div class="toc">
+  <h2>On this page</h2>
+  {{ . }}
+  </div>
+  {{ end }}
+  <div class="article-main">
+    <h1>{{ .Title }}</h1>
+    {{ .Content }}
+    {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
+  </div>
+</div>
 {{ end }}
