--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,5 +1,10 @@
 @import "vendors/normalize";
 
+@import "themes/dark";
+@import "themes/light";
+
+@import "components/chroma";
+
 //Variables
 $breakpoint-sm: 576px;
 $breakpoint-md: 768px;
@@ -16,6 +21,7 @@ $font-family-mono: "Roboto Mono", Consolas, "Andale Mono WT", "Andale Mono", "Lu
 
 //Color schemes
 :root {
+    //Default colors in case browser does not support data-theme
     --text-color: #000;
     --background-color: #fff;
     --link-color: #543fd7;
@@ -27,19 +33,6 @@ $font-family-mono: "Roboto Mono", Consolas, "Andale Mono WT", "Andale Mono", "Lu
     --slider-height: calc(var(--switch-height) - var(--switch-padding));
     --slider-on: calc(var(--switch-height) - var(--switch-padding));    
 }
-
-html[data-theme='light'] {
-    --background-color: #fff;
-    --text-color: #121416d8;
-    --link-color: #543fd7;
-}
-
-html[data-theme='dark'] {
-    --background-color: #212a2e;
-    --text-color: #F7F8F8;
-    --link-color: #828fff;
-}
-
 
 //Base styles
 * {
@@ -304,6 +297,8 @@ input:checked+.slider:before {
 //Layout
 .container {
     width: 100%;
+    padding: 5px 20px;
+    overflow: hidden;
 }
 
 // Code
@@ -318,9 +313,81 @@ input:checked+.slider:before {
     background-color: var(--background-color);
     margin: 1px solid white;
     padding: 10px 5px;
+    overflow:scroll;
 }
 
 .code-block pre code {
     font-family: $font-family-mono;
     font-size: calc(var(--base-font-size) * 0.8);
+}
+
+.copy-button {
+    top: 0rem;
+    right: 0.5rem;
+    margin: 0;
+    min-height: 28px;
+    padding: 4px 8px;
+    background-color: #fff;
+    color: rgb(60, 66, 87);
+    border: 1px solid rgb(60, 66, 87);
+    border-radius: 4px;
+    font-weight: 600;
+}
+
+.text-copyright {
+    text-align: center;
+}
+
+.footer-links {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+
+    @media only screen and (max-width: $breakpoint-sm) {
+        grid-template-columns: 1fr;
+    }
+}
+
+.footer-copyright {
+    padding-top: 20px;
+}
+
+.footer-links ul {
+    list-style: none;
+}
+
+footer {
+    padding: 10px 30px;
+}
+
+#TableOfContents {
+
+}
+
+#TableOfContents ul {
+    list-style: none;    
+}
+
+#TableOfContents ul > li > ul {
+    margin-left: 15px;
+}
+
+.article {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-template-areas: "main toc";  
+
+    @media only screen and (max-width: $breakpoint-md) {
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+            "toc"
+            "main";
+    }
+}
+
+.toc {
+    grid-area: toc;
+}
+
+.article-main {
+    grid-area: main;
 }
