--- a/layouts/_default/_markup/render-codeblock.html
+++ b/layouts/_default/_markup/render-codeblock.html
@@ -1,20 +1,15 @@
-<div class="code-block-container">
+<div class="code-block-container" style="border: 1px solid white;">
     {{ with .Attributes.title }}
     <div class="code-block-title">
         <span>{{ . | markdownify }}</span>
-        <span class="copy-icon"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M360-240q-33 0-56.5-23.5T280-320v-480q0-33 23.5-56.5T360-880h360q33 0 56.5 23.5T800-800v480q0 33-23.5 56.5T720-240H360Zm0-80h360v-480H360v480ZM200-80q-33 0-56.5-23.5T120-160v-560h80v560h440v80H200Zm160-240v-480 480Z"/></svg></span>
+        <span class="copy-icon"></span>
     </div>
     {{ end }}
-    <div class="code-block">
-        <pre><code>
-            {{- with transform.HighlightCodeBlock . -}}
+    <div class="code-block" style="border: 1px solid green;">
+        <pre><code class="chroma">
+            {{- with transform.HighlightCodeBlock . "noClasses=false" -}}
             {{ .Inner }}
-            {{ end }}
+            {{- end -}}
         </code></pre>
     </div> 
 </div>
-
-<!-- {{ $id := delimit (shuffle (seq 1 9)) "" }}
-  https://roboleary.net/2022/01/13/copy-code-to-clipboard-blog
-  https://www.w3schools.com/howto/howto_js_copy_clipboard.asp
--->
