--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,19 +1,15 @@
 @import "vendors/normalize";
+@import "abstracts/variables";
 
 @import "themes/dark";
 @import "themes/light";
 
-@import "components/chroma";
+@import "components/codeblock";
+
+@import "layouts/sidebar";
+
 
 //Variables
-$breakpoint-sm: 576px;
-$breakpoint-md: 768px;
-$breakpoint-lg: 992px;
-$breakpoint-xl: 1200px;
-
-$font-family-sans: Inter, Seravek, 'Gill Sans Nova', Ubuntu, Calibri, 'DejaVu Sans', source-sans-pro, sans-serif;
-$font-family-serif: "Source Serif 4", 'Bookman Old Style', 'URW Bookman', 'URW Bookman L', 'Georgia Pro', Georgia, serif; 
-$font-family-mono: "Roboto Mono", Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace;
 
 
 //https://dev.to/ananyaneogi/create-a-dark-light-mode-switch-with-css-variables-34l8
@@ -146,93 +142,7 @@ main {
 .site-icon {
     vertical-align: middle;
 }
-#menuToggler {
-    //Style for hamburger button
-    display: none;
 
-    @media only screen and (max-width: $breakpoint-sm) {
-        display: block;
-    }
-}
-
-.sidenav {
-    height: 100%;
-    width: 250px;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    overflow-x: hidden;
-    display: none;
-    padding-top: 15px;
-    background-color: var(--background-color);
-    border-right: 1px solid #818181;
-    
-    @media only screen and (min-width: $breakpoint-sm) {
-        display: block;
-        padding-top: 10px;
-        position: static;
-        border: 0;
-        animation-name: none;
-        background-color: inherit;
-    }
-}
-
-@keyframes slidein {
-    from {left: -250px;}
-    to {left: 0px;}
-}
-
-@keyframes slideout {
-    from {left: 0px;}
-    to {left: -250px;}
-}
-
-.sidenav.hide {
-    display: block !important;
-    animation-name: slideout !important;
-    animation-duration: 0.5s;
-}
-
-.sidenav.show {
-    display: block !important; //Reveals the sidebar
-    animation-name: slidein !important;
-    animation-duration: 0.5s;
-}
-
-.sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    color: #818181;
-    display: block;
-    transition: 0.3s;  
-
-    @media only screen and (max-width: $breakpoint-sm) {
-        font-size: 18px;
-    }
-}
-
-.sidenav a.active {
-    color: var(--text-color);
-    
-}
-
-.sidenav a:hover {
-    color: var(--text-color);
-}
-
-.sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 5px;
-    font-size: 20px;
-    margin-left: 50px;
-    display: none;
-
-    @media only screen and (max-width: $breakpoint-sm) {
-        display: block;
-    }
-}
 
 //Dark/Light theme slider
 
@@ -297,41 +207,6 @@ input:checked+.slider:before {
 //Layout
 .container {
     width: 100%;
-    padding: 5px 20px;
-    overflow: hidden;
-}
-
-// Code
-.code-block-title {
-    background-color: #0a7eaf;
-    padding: 5px 5px;
-    font-family: $font-family-mono;
-    font-size: calc(var(--base-font-size) * 0.8);
-}
-
-.code-block {
-    background-color: var(--background-color);
-    margin: 1px solid white;
-    padding: 10px 5px;
-    overflow:scroll;
-}
-
-.code-block pre code {
-    font-family: $font-family-mono;
-    font-size: calc(var(--base-font-size) * 0.8);
-}
-
-.copy-button {
-    top: 0rem;
-    right: 0.5rem;
-    margin: 0;
-    min-height: 28px;
-    padding: 4px 8px;
-    background-color: #fff;
-    color: rgb(60, 66, 87);
-    border: 1px solid rgb(60, 66, 87);
-    border-radius: 4px;
-    font-weight: 600;
 }
 
 .text-copyright {
@@ -359,10 +234,6 @@ footer {
     padding: 10px 30px;
 }
 
-#TableOfContents {
-
-}
-
 #TableOfContents ul {
     list-style: none;    
 }
@@ -373,8 +244,8 @@ footer {
 
 .article {
     display: grid;
-    grid-template-columns: 1fr auto;
-    grid-template-areas: "main toc";  
+    grid-template-columns: 1fr 150px;
+    grid-template-areas: "main toc";
 
     @media only screen and (max-width: $breakpoint-md) {
         grid-template-columns: 1fr;
@@ -386,8 +257,15 @@ footer {
 
 .toc {
     grid-area: toc;
+    width: 250px;
 }
 
 .article-main {
+    display: block;
     grid-area: main;
+    max-width: 1100px;
+
+    @media only screen and (max-width: $breakpoint-sm) {
+        max-width: 95vw;
+    }
 }
