--- a/assets/sass/themes/_dark.scss
+++ b/assets/sass/themes/_dark.scss
@@ -5,6 +5,7 @@
     --background-color: #212a2e;
     --text-color: #F7F8F8;
     --link-color: #828fff;
+    --footer-color: #0e1213;
 
     //Syntax highlighting
     --chroma-bg: #282a36;
