--- a/assets/sass/themes/_light.scss
+++ b/assets/sass/themes/_light.scss
@@ -3,6 +3,7 @@
     --background-color: #fff;
     --text-color: #121416d8;
     --link-color: #543fd7;
+    --footer-color: #e2edef;
    
 
     //Syntax highlighting
