--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,15 +1,15 @@
 {{ define "main" }}
-<div class="article">
-  {{ if in .TableOfContents "li" }}
-  <div class="toc">
-    <h2>On this page</h2>
-    {{ .TableOfContents }}
-  </div>
-  {{ end }}
-  <div class="article-main">
-    <h1>{{ .Title }}</h1>
-    {{ .Content }}
-    {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
-  </div>
+<div class="content-container article">
+    {{ if in .TableOfContents "li" }}
+    <div class="toc">
+      <h2>On this page</h2>
+      {{ .TableOfContents }}
+    </div>
+    {{ end }}
+    <div class="article-main">
+      <h1>{{ .Title }}</h1>
+      {{ .Content }}
+      {{ partial "terms.html" (dict "taxonomy" "tags" "page" .) }}
+    </div>
 </div>
 {{ end }}
