--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,6 +2,9 @@
     <div class="footer-links">
         <div>
         {{ with .Site.Menus.footer1 }}        
+            {{ with site.Params.footer1_title }}
+            <h1>{{ . }}</h1>
+            {{ end }}
             <ul>
                 {{ range . }}
                 <li><a href="{{ .URL }}"{{- with .Params.rel }}{{ if eq . "external" }}target="_blank"{{ end }}{{ end }}>{{ .Name }}</a></li>
@@ -10,7 +13,10 @@
         {{ end }}
         </div>
         <div>
-        {{ with .Site.Menus.footer2 }}        
+        {{ with .Site.Menus.footer2 }}  
+            {{ with site.Params.footer2_title }}
+            <h1>{{ . }}</h1>
+            {{ end }}      
             <ul>
                 {{ range . }}
                 <li><a href="{{ .URL }}"{{- with .Params.rel }}{{ if eq . "external" }}target="_blank"{{ end }}{{ end }}>{{ .Name }}</a></li>
@@ -19,7 +25,10 @@
         {{ end }}
         </div>
         <div>
-        {{ with .Site.Menus.footer3 }}        
+        {{ with .Site.Menus.footer3 }}   
+            {{ with site.Params.footer3_title }}
+            <h1>{{ . }}</h1>
+            {{ end }}          
             <ul>
                 {{ range . }}
                 <li><a href="{{ .URL }}"{{- with .Params.rel }}{{ if eq . "external" }}target="_blank"{{ end }}{{ end }}>{{ .Name }}</a></li>
@@ -29,6 +38,9 @@
         </div>
         <div>
         {{ with .Site.Menus.footer4 }}
+            {{ with site.Params.footer4_title }}
+            <h1>{{ . }}</h1>
+            {{ end }}     
             <ul>
                 {{ range . }}
                 <li><a href="{{ .URL }}"{{- with .Params.rel }}{{ if eq . "external" }}target="_blank"{{ end }}{{ end }}>{{ .Name }}</a></li>
@@ -38,6 +50,6 @@
         </div>
     </div>
     <div class="footer-copyright">
-        <p class="text-copyright">{{- with site.Params.copyright }}{{ . | markdownify }}{{- end }} Built with Hugo and Janssen.</p>
+        <p class="text-copyright">{{- with site.Params.copyright }}{{ . | markdownify }}{{- end }} Built with <a href="https://gohugo.io">Hugo</a> and <a href="https://github.com/jwtay1/hugo-theme-janssen">Janssen</a>.</p>
     </div>
 </div>
