--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,9 +1,11 @@
 {{ define "main" }}
 <div class="content-container article">
     {{ if in .TableOfContents "li" }}
-    <div class="toc">
-      <h2>On this page</h2>
-      {{ .TableOfContents }}
+    <div class="dropdown">
+      <button class="dropbtn" onclick="showTOC()">On this page<span style="float:right;"><svg style="vertical-align: middle;" xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M480-360 280-560h400L480-360Z"/></svg></span></button>
+      <div class="dropdown-content" id="toc">
+        {{ .TableOfContents }}
+      </div>
     </div>
     {{ end }}
     <div class="article-main">
