--- a/assets/sass/themes/_light.scss
+++ b/assets/sass/themes/_light.scss
@@ -1,10 +1,10 @@
 :root[data-theme='light'] {
     //Base colors
-    --background-color: #fff;
-    --background-color-secondary: #f0f0f0;
+    --background-color: #f3f3f3;
+    --background-color-secondary: #e7e7e7;
     --text-color: #121416;
     --link-color: #543fd7;
-    --footer-color: #e2edef;
+    --footer-color: #f2f2f2;
     --footer-link-color: #2a2c2e;
    
     //Syntax highlighting
