--- a/assets/sass/themes/_dark.scss
+++ b/assets/sass/themes/_dark.scss
@@ -8,8 +8,9 @@
     --link-color: #828fff;
     --footer-color: #2c2c2c;
     --footer-link-color: #c4c4c4;
-    
-
+    --sidebar-background-color: rgba(255, 255, 255, 0.05);
+    --sidebar-icon-background-color: rgba(255, 255, 255, 0.1);
+   
     //Syntax highlighting
     --chroma-bg: #282a36;
     --chroma-color: #f8f8f2;
