--- a/assets/sass/layouts/_page.scss
+++ b/assets/sass/layouts/_page.scss
@@ -12,16 +12,18 @@
     list-style: none;    
 }
 
+/*
 #TableOfContents ul > li > ul {
     margin-left: 15px;
 }
+*/
 
 .article {
     display: grid;
-    grid-template-columns: 1fr 150px;
+    grid-template-columns: minmax(0, 1fr) auto;
     grid-template-areas: "main toc";
 
-    @media only screen and (max-width: $breakpoint-md) {
+    @media only screen and (max-width: $breakpoint-lg) {
         grid-template-columns: minmax(0, 1fr);
         grid-template-areas: 
             "toc"
@@ -35,12 +37,13 @@
 
 .article-main {
     grid-area: main;
+    margin-right: 15px;
 }
 
-.dropbtn {
+.btn-toc-dropdown {
     background-color: var(--background-color-secondary);
     color: var(--text-color);
-    padding: 16px;
+    padding: 16px 17px 10px 17px;
     font-size: 16px;
     border: none;
     cursor: pointer;
@@ -48,9 +51,12 @@
     text-align: left;
     display: none;
     fill: var(--text-color);
+    border-radius: 10px;
+    vertical-align: middle;
     
-    @media only screen and (max-width: $breakpoint-md) {
+    @media only screen and (max-width: $breakpoint-lg) {
         display: block;
+        transition: all 0.25s ease;
     }
 
 }
@@ -59,6 +65,16 @@
 .dropdown {
     position: relative;
     display: inline-block;
+    width: 150px;
+    height: 100%;
+    border-left: 1px solid rgba(220, 220, 220, 0.22);
+    padding-left: 20px;
+
+    @media only screen and (max-width: $breakpoint-lg) {
+        width: 100%;
+        border: none;
+        padding-left: 0;
+    }
 }
 
 /* Dropdown Content (Hidden by Default) */
@@ -68,34 +84,42 @@
     z-index: 1;
     width: 100%;
 
-    @media only screen and (max-width: $breakpoint-md) {
+    @media only screen and (max-width: $breakpoint-lg) {
         transition: all 0.3s ease;
         max-height: 0;
         overflow: hidden;
         background-color: var(--background-color-secondary);
-        box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.2);
+        box-shadow: 0px 3px 4px 0px rgba(0,0,0,0.2);
     }
 }
 
 /* Links inside the dropdown */
 .dropdown-content a {
     color: var(--text-color);
-    padding: 12px 16px;
+    padding: 5px 0px;
     text-decoration: none;
-    display: block;    
+    display: block;
+
+    @media only screen and (max-width: $breakpoint-lg) {
+        padding: 12px 16px;
+    }
 }
 
 /* Change color of dropdown links on hover */
 .dropdown-content a:hover {
     color: var(--link-color);
+
+    @media only screen and (max-width: $breakpoint-lg) {        
+        background-color: var(--sidebar-background-color);
+    }
 }
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
-.unfold {        
+.unfold {
+    border-top: none;
 
-    border-top: 1px solid var(--text-color);
-
-    @media only screen and (max-width: $breakpoint-md) {
-        max-height: 500px;
+    @media only screen and (max-width: $breakpoint-lg) {
+        border-top: 1px solid var(--text-color);
+        max-height: 1000px;
     }
 }
