--- a/assets/sass/themes/_light.scss
+++ b/assets/sass/themes/_light.scss
@@ -6,6 +6,9 @@
     --link-color: #543fd7;
     --footer-color: #f2f2f2;
     --footer-link-color: #2a2c2e;
+    --sidebar-background-color: rgba(0, 0, 0, 0.05);
+    --sidebar-active-background-color: rgba(0, 0, 0, 0.07);
+    --sidebar-icon-background-color: rgba(0, 0, 0, 0.1);
    
     //Syntax highlighting
     --chroma-bg: #eff1f5;
