--- a/assets/sass/layouts/_topbar.scss
+++ b/assets/sass/layouts/_topbar.scss
@@ -1,3 +1,5 @@
+@use "./abstracts" as *;
+
 //Navigation
 .topnav {
     display: flex;
@@ -27,8 +29,8 @@
 
 .site-title {
     vertical-align: middle;
-    font-family: $font-family-serif;
-    font-weight: 800;
+    font-family: $font-family-sans;
+    font-weight: 600;
     font-size: calc(var(--base-font-size) * 1.8);
 }
 
