--- a/layouts/partials/head/css.html
+++ b/layouts/partials/head/css.html
@@ -1,21 +1,20 @@
-{{ with resources.Get "sass/main.scss" }}
-  {{ $opts := dict
+{{- with resources.Get "sass/main.scss" }}
+  {{- $opts := dict
     "enableSourceMap" (not hugo.IsProduction)
     "outputStyle" (cond hugo.IsProduction "compressed" "expanded")
     "targetPath" "css/main.css"
-    "transpiler" "libsass"
+    "transpiler" "dartsass"
   }}
-  {{ with . | toCSS $opts }}
-    {{ if hugo.IsProduction }}
-      {{ with . | fingerprint }}
+  {{- with . | toCSS $opts }}
+    {{- if hugo.IsProduction }}
+      {{- with . | fingerprint }}
         <link rel="stylesheet" href="{{ .RelPermalink }}" integrity="{{ .Data.Integrity }}" crossorigin="anonymous">
-      {{ end }}
-    {{ else }}
+      {{- end }}
+    {{- else }}
       <link rel="stylesheet" href="{{ .RelPermalink }}">
-    {{ end }}
-  {{ end }}
-{{ end }}
-
+    {{- end }}
+  {{ end -}}
+{{ end -}}
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap" rel="stylesheet">
