--- a/assets/sass/themes/_dark.scss
+++ b/assets/sass/themes/_dark.scss
@@ -9,6 +9,7 @@
     --footer-color: #2c2c2c;
     --footer-link-color: #c4c4c4;
     --sidebar-background-color: rgba(255, 255, 255, 0.05);
+    --sidebar-active-background-color: rgba(255, 255, 255, 0.07);
     --sidebar-icon-background-color: rgba(255, 255, 255, 0.1);
    
     //Syntax highlighting
